--- a/New.css
+++ b/New.css
@@ -16,8 +16,9 @@ body{
 }   
 
 .kuroneko{
-    font-size: 50px;
-    font-family: Nosifer;
+    font-size: 150px;
+    font-weight: bolder;
+    font-family: Metal mania;
     text-align: center;
 }
 
@@ -27,8 +28,8 @@ body{
 }
 
 .description{
-    font-size: 22px;
-    font-family: Roboto;
+    font-size: 70px;
+    font-family: Shalimar;
     text-align: center;
     font-weight: bold;
 }
@@ -36,7 +37,7 @@ body{
 .description-container{
     width: 80%;
     margin: auto;
-    margin-top: -40px;
+    margin-top: -60px;
 }
 
 .opening-container{
@@ -63,7 +64,7 @@ body{
 
 @media screen and (max-width: 500px) {
     .kuroneko{
-        font-size: 40px;
+        font-size: 60px;
     }
     
     .kuro-container{
@@ -72,14 +73,14 @@ body{
     }
     
     .description{
-        font-size: 18px;
+        font-size: 30px;
         font-weight: 400px;
     }
     
     .description-container{
         width: 100%;
         margin: auto;
-        margin-top: -20px;
+        margin-top: -50px;
     }
     
     
@@ -110,6 +111,28 @@ body{
     
 }
 
+@media screen and (max-width: 820px) and (min-width:501px){
+    .kuroneko{
+        font-size: 100px;
+    }
+    
+    .kuro-container{
+        width: 80%;
+        margin: auto;
+    }
+    
+    .description{
+        font-size: 40px;
+        font-weight: 400px;
+    }
+    
+    .description-container{
+        width: 100%;
+        margin: auto;
+        margin-top: -70px;
+    }
+}
+
 .img1{
     width: 80%;
     display: block;
@@ -129,7 +152,7 @@ body{
 
 .fourthline{
     font-size: 24px;
-    font-family: Roboto;
+    font-family: antonio;
     margin-left: 15px;
     margin-right: 10px;
     color: white;
@@ -137,7 +160,7 @@ body{
 
 .fifthline{
     font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: antonio;
     margin-left: 10px;
     margin-right: 10px;
     color: white;
@@ -161,7 +184,7 @@ body{
 }
 .sixthline{
     font-size: 24px;
-    font-family: Roboto;
+    font-family: antonio;
     margin-left: 10px;
     margin-right: 10px;
     color: white;
@@ -186,7 +209,7 @@ body{
 
 .seventhline{
     font-size: 24px;
-    font-family: Roboto;
+    font-family: antonio;
     margin-left: 10px;
     margin-right: 10px;
     color: white;
@@ -223,16 +246,16 @@ body{
     }
     
     .fourthline{
-        font-size: 14px;
-        font-family: Roboto;
+        font-size: 16px;
+        font-family: antonio;
         margin-left: 25px;
         margin-right: 10px;
         color: white;
     }
     
     .fifthline{
-        font-size: 14px;
-        font-family: Arial, Helvetica, sans-serif;
+        font-size: 16px;
+        font-family: antonio;
         margin-left: 25px;
         margin-right: 10px;
         color: white;
@@ -248,8 +271,8 @@ body{
         margin-bottom: 20px;
     }
     .sixthline{
-        font-size: 14px;
-        font-family: Roboto;
+        font-size: 16px;
+        font-family: antonio;
         margin-left: 25px;
         margin-right: 10px;
         color: white;
@@ -266,8 +289,8 @@ body{
     }
     
     .seventhline{
-        font-size: 14px;
-        font-family: Roboto;
+        font-size: 16px;
+        font-family: antonio;
         margin-left: 25px;
         margin-right: 10px;
         color: white;
@@ -288,6 +311,27 @@ body{
         width: 100%;
         margin: auto;
     }
+
+    
+}
+
+@media screen and (max-width: 800px) and (min-width: 501px){
+     
+    .fourthline{
+        font-size: 20px;
+    }
+    
+    .fifthline{
+        font-size: 20px;
+    }
+    
+    .sixthline{
+        font-size: 20px;
+    }
+    
+    .seventhline{
+        font-size: 20px;
+    }
     
 }
 
@@ -297,8 +341,8 @@ body{
 }
 
 .chart-heading {
-    font-family: Nosifer;
-    font-size: 50px;
+    font-family: Metal mania;
+    font-size: 70px;
     text-align: center;
     margin-bottom: 100px;
     color: white;
@@ -348,20 +392,20 @@ body{
     }
     
     .chart-heading{
-        font-family: Nosifer;
-        font-size: 23px;
+        font-family: Metal mania;
+        font-size: 35px;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
     }
     .token-stats{
         font-family: Roboto;
-        font-size: 8px;
+        font-size: 10px;
         display: flex;
         align-items: center;
         justify-content: left;
         gap: 10;
         margin: 0 auto;
-        width: 90%;
+        width: 82%;
         margin-bottom: 0;
         margin-top: 0;
         padding-right: 40px;
@@ -379,7 +423,7 @@ body{
 
 @media screen and (max-width: 750px) and (min-width: 501px){
     .chart-heading{
-        font-family: Nosifer;
+        font-family: Metal mania;
         font-size: 35px;
         text-align: center;
         margin-bottom: 60px;
@@ -757,8 +801,8 @@ body{
 }
 
 .road{
-    font-family: Nosifer;
-    font-size: 50px;
+    font-family: Metal mania;
+    font-size: 70px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 100px;
@@ -814,8 +858,8 @@ body{
     
 
     .road{
-        font-family: Nosifer;
-        font-size: 30px;
+        font-family: Metal mania;
+        font-size: 40px;
     }
     
     .road1{
@@ -852,13 +896,12 @@ body{
 
 @media screen and (max-width: 600px) {
     .roadmap{
-        border-top: 1px solid rgb(255, 255, 255);
         margin-top: 200px;
         padding-top: 30px;
     }
     .road{
-        font-family: Nosifer;
-        font-size: 30px;
+        font-family: Metal mania;
+        font-size: 40px;
         font-weight: bold;
         text-align: center;
     }
@@ -892,7 +935,6 @@ body{
 
 @media screen and (max-width: 700px) and (min-width: 601px) {
     .roadmap{
-        border-top: 1px solid rgb(255, 255, 255);
         margin-top: 200px;
         padding-top: 30px;
     }
@@ -928,7 +970,6 @@ body{
 
 @media screen and (max-width: 1080px) and (min-width: 701px) {
     .roadmap{
-        border-top: 1px solid rgb(255, 255, 255);
         margin-top: 200px;
         padding-top: 30px;
     }
@@ -1726,11 +1767,12 @@ body{
 
 .contact{
     padding-top: 140px;
+    margin-top: 100px;
 }
 
 .community{
-    font-size: 50px;
-    font-family: Roboto;
+    font-size: 100px;
+    font-family: Shalimar;
     text-align: center;
     font-weight: bold;
     color: #ffffff;
@@ -1770,7 +1812,7 @@ body{
 
 @media screen and (max-width: 500px) {
     .contact p{
-        font-size: 30px;
+        font-size: 50px;
     }
     .contact{
         padding-top: 30px;
@@ -1779,10 +1821,9 @@ body{
 
 @media screen and (max-width: 700px) and (min-width: 501px){
     .contact p{
-        font-size: 30px;
+        font-size: 60px;
     }
     .contact{
-        border-top: 1px solid black;
         padding-top: 30px;
     }
 }
@@ -1924,27 +1965,27 @@ body{
 }
 
 .bscpic{
-    width: 90px;
-}
-
-.cakepic{
-    width: 180px;  
-}
-
-.geckopic{
-    width: 110px;
-}
-
-.dexpic{
-    width: 90px;
-}
-
-.blazepic{
     width: 85px;
 }
 
-.cmcpic{
+.cakepic{
+    width: 170px;  
+}
+
+.geckopic{
     width: 100px;
+}
+
+.dexpic{
+    width: 85px;
+}
+
+.blazepic{
+    width: 80px;
+}
+
+.cmcpic{
+    width: 90px;
 }
 
 
