--- a/New.css
+++ b/New.css
@@ -405,7 +405,7 @@ body{
         justify-content: left;
         gap: 10;
         margin: 0 auto;
-        width: 82%;
+        width: 90%;
         margin-bottom: 0;
         margin-top: 0;
         padding-right: 40px;
@@ -414,7 +414,7 @@ body{
     .token-stats .details ul li{
         font-size: 11px;
         text-transform: uppercase;
-        margin-left: -25px;
+        margin-left: -45px;
         font-weight: bold;
        
     }
@@ -498,7 +498,7 @@ body{
         width: 40%;
         height: 40%;
         margin: 0 auto;
-        margin-top: 25px;
+        margin-top: 50px;
         margin-bottom: 25px;
     }
 
@@ -605,8 +605,8 @@ body{
     .taxes{
         display: flex;
         flex-direction: row;
-        margin-top: 40px;
-        justify-content: space-between;
+        margin-top: 60px;
+        justify-content: center;
         padding-left: 10px;
         padding-right: 10px;
         margin-left: auto;
@@ -614,25 +614,36 @@ body{
     }
     
     .buy{
-        width: 50%;
+        width: 40%;
+        padding: 0;
+        padding-left: 10px;
+        padding-right: 18px;
+        padding-top: 20px;
+        height: 280px;
     }
     
     
     .buytax{
-        font-size: 18px;
+        font-size: 16px;
         font-weight: bold;
         color: rgb(16, 184, 16);
     }
     
     .buy ul{
         list-style: none;
-        font-size: 18px;
+        font-size: 14px;
         color: white;
+        margin-left: -25px;
     }
     
    
     .sell{
-        width: 50%;
+        width: 40%;
+        padding: 0;
+        padding-right: 10px;
+        padding-left: 18px;
+        padding-top: 20px;
+        height: 280px;
     }
     
     .selltax{
@@ -643,17 +654,18 @@ body{
     
     .sell ul{
         list-style: none;
-        font-size: 16px;
+        font-size: 14px;
+        margin-left: -25px;
     }
     
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) and (min-width: 501px) {
     .taxes{
         display: flex;
         flex-direction: row;
-        margin-top: 20px;
+        margin-top: 50px;
         justify-content: space-between;
         width: auto;
     }
@@ -664,83 +676,9 @@ body{
         padding-bottom: 0;
         color: #ffffff;
         transition: all 400ms ease;
-        width: 80%;
-        height: 260px;
-        padding-left: 8px;
-        padding-right: 10px;
-        margin-right: 30px;
-        margin-left: -24px;
-
-    }
-    .buytax{
-        font-size: 20px;
-        font-weight: bold;
-        color: rgb(16, 184, 16);
-        text-align: center;
-    }
-    
-    .buy ul{
-        list-style: none;
-        font-size: 16px;
-        font-weight: bold;
-    }
-    
-    .buy ul li{
-        margin: 20px 5px;
-        margin-left: 0;
-        text-transform: uppercase;
-    }
-    .sell{
-        font-family: Roboto;
-        box-shadow: 2px 6px 15px -2px rgb(255, 255, 255);
-        border-radius: 20px;
-        padding-bottom: 0;
-        color: #ffffff;
-        transition: all 400ms ease;
-        width: 80%;
-        height: 260px;
-        padding-left: 8px;
-        padding-right: 10px;
-        margin-left: 10px;
-    }
-    .selltax{
-        font-size: 20px;
-        font-weight: bold;
-        color: #e63946;
-        text-align: center;
-    }
-    
-    .sell ul{
-        list-style: none;
-        font-size: 16px;
-        font-weight: bold;
-    }
-    
-    .sell ul li{
-        margin: 16px 5px;
-        text-transform: uppercase;
-    }
-    
-}
-
-@media screen and (max-width: 900px) and (min-width: 601px) {
-    .taxes{
-        display: flex;
-        flex-direction: row;
-        margin-top: 20px;
-        justify-content: space-between;
-        width: auto;
-    }
-    .buy{
-        font-family: Roboto;
-        box-shadow: 2px 6px 15px -2px rgb(255, 255, 255);
-        border-radius: 20px;
-        padding-bottom: 0;
-        color: #ffffff;
-        transition: all 400ms ease;
-        width: 80%;
-        height: 260px;
-        padding-left: 8px;
+        width: 85%;
+        height: 300px;
+        padding-left: 40px;
         padding-right: 10px;
         margin-right: 30px;
         margin-left: -24px;
@@ -770,9 +708,9 @@ body{
         padding-bottom: 0;
         color: #ffffff;
         transition: all 400ms ease;
-        width: 80%;
-        height: 260px;
-        padding-left: 8px;
+        width: 85%;
+        height: 300px;
+        padding-left: 40px;
         padding-right: 10px;
         margin-left: 10px;
     }
@@ -866,7 +804,7 @@ body{
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: left;
+        justify-content: center;
         padding-right: 15px;
     }
     
@@ -874,7 +812,8 @@ body{
         rotate: 270deg;
         width: 100%;
         margin: 0;
-        margin-left: -10px;
+        margin-left: -5px;
+        height: 300px;
     }
     
     .q1note{
@@ -1046,7 +985,7 @@ body{
 
 @media screen and (max-width: 500px) {
     .road2{
-        margin-top: 80px;
+        margin-top: 100px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -1077,7 +1016,8 @@ body{
     
     .catsquat{
         width: 80%;
-        margin-right: -160px;
+        height: 400px;
+        margin-right: -100px;
     }
     
 }
